# MLE

./: .env  .gitignore  collection.py  config.py  db.sqlite  db_model.py  main.py  model.py  model_service.py  preparation.py  pyproject.toml  random_forest.ipynb  rent_apartments.csv
src/: main.py
src/config/: .env  __init__.py  config.py  db.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
